# fpinscala

./: LICENSE  README.md
haskell/: README.md  flake.nix  fpinscala.cabal
haskell/.devcontainer/: devcontainer.json
haskell/lib/FpInScala/: Exercise21.hs
haskell/lib/FpInScala/Part1/Chapter2/: GettingStarted.hs
haskell/lib/FpInScala/Part1/Chapter3/: FunctionalDataStructure.hs  List.hs  Tree.hs
haskell/lib/FpInScala/Part1/Chapter4/: MyEither.hs  Option.hs  Validated.hs
haskell/lib/FpInScala/Part1/Chapter5/: LazyList.hs
haskell/src/: Exercise21.hs
haskell/test/: Main.hs
haskell/test/FpInScalaSpec/: Exercise21Spec.hs
haskell/test/FpInScalaSpec/Part1/Chapter2/: GettingStartedSpec.hs
haskell/test/FpInScalaSpec/Part1/Chapter3/: FunctionalDataStructureSpec.hs  ListSpec.hs  TreeSpec.hs
haskell/test/FpInScalaSpec/Part1/Chapter4/: MyEitherSpec.hs  OptionSpec.hs
haskell/test/FpInScalaSpec/Part1/Chapter5/: LazyListSpec.hs
python/: .envrc  Makefile  README.md  flake.nix  pyproject.toml
python/.devcontainer/: devcontainer.json
python/src/: exercise21.py  getting_started.py
python/src/part1/chapter2/: getting_started.py
python/src/part1/chapter3/: functional_data_structure.py  list.py  tree.py
python/src/part1/chapter4/: either.py  option.py  validated.py
python/src/part1/chapter5/: lazy_list.py
python/tests/: test_exercise21.py  test_getting_started.py
python/tests/test_part1/test_chapter2/: test_getting_started.py
python/tests/test_part1/test_chapter3/: test_functional_data_structure.py  test_list.py  test_tree.py
python/tests/test_part1/test_chapter4/: test_either.py  test_option.py
rust/: Cargo.toml  README.md  flake.nix
rust/.devcontainer/: devcontainer.json
rust/src/: exercise21.rs  getting_started.rs  lib.rs  part1.rs
rust/src/part1/: chapter3.rs  chapter4.rs
rust/src/part1/chapter2/: getting_started.rs
rust/src/part1/chapter3/: functional_data_structure.rs  list.rs  tree.rs
rust/src/part1/chapter4/: either.rs  option.rs  validated.rs
rust/tests/: exercise21.rs  getting_started.rs
scala/: .gitignore  README.md  build.sbt  flake.nix
scala/.devcontainer/: Dockerfile  devcontainer.json
scala/src/main/scala/: Exercise21.scala
scala/src/main/scala/part1/chapter2/: GettingStarted.scala
scala/src/main/scala/part1/chapter3/: FunctionalDataStructure.scala  List.scala  Tree.scala
scala/src/main/scala/part1/chapter4/: Either.scala  Option.scala  Validated.scala
scala/src/main/scala/part1/chapter5/: LazyList.scala
scala/src/test/scala/: Exercise21Suite.scala
scala/src/test/scala/part1/chapter2/: GettingStartedSuite.scala
scala/src/test/scala/part1/chapter3/: FunctionalDataStructure.scala  ListSuite.scala  TreeSuite.scala
scala/src/test/scala/part1/chapter4/: EitherSuite.scala  OptionSuite.scala
scala/src/test/scala/part1/chapter5/: LazyListSuite.scala.scala
typescript/: README.md  eslint.config.ts  flake.nix  jest.config.js  package-lock.json  package.json  tsconfig.json
typescript/src/: exercise21.ts  getting_started.ts
typescript/src/part1/chapter2/: getting_started.ts
typescript/src/part1/chapter3/: functional_data_structure.ts  list.ts  tree.ts
typescript/src/part1/chapter4/: either.ts  option.ts  validated.ts
typescript/src/part1/chapter5/: lazylist.ts
typescript/tests/: exercise21.test.ts  getting_started.test.ts
typescript/tests/part1/chapter2/: getting_started.test.ts
typescript/tests/part1/chapter3/: functional_data_structure.test.ts  list.test.ts  tree.test.ts
typescript/tests/part1/chapter4/: either.test.ts  option.test.ts
