cabal-version:      3.0
name:               fpinscala
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             usabarashi
maintainer:
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  FpInScala.Part1.Chapter2.GettingStarted
                      FpInScala.Part1.Chapter3.List
    build-depends:    base ^>=4.17.1.0
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite fpinscala-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    FpInScalaSpec.Part1.Chapter2.GettingStartedSpec
                      FpInScalaSpec.Part1.Chapter3.ListSpec
    build-depends:
        base ^>=4.17.1.0,
        hspec,
        fpinscala
